feat: wire api to send back task metadata
