# api/v1/server/handlers/v2/workflow-runs/get.go
@@ -2,6 +2,7 @@ package workflowruns
 
 import (
 	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
 	"github.com/labstack/echo/v4"
 
 	"github.com/hatchet-dev/hatchet/api/v1/server/oas/gen"
@@ -25,10 +26,21 @@ func (t *V2WorkflowRunsService) V2WorkflowRunGet(ctx echo.Context, request gen.V
 		return nil, err
 	}
 
-	workflowRunPtr, err := t.config.OLAPRepository.ReadWorkflowRun(requestContext, sqlchelpers.UUIDFromStr(tenant.ID), sqlchelpers.UUIDFromStr(workflowRunId.String()))
+	workflowRunPtr, taskMetadata, err := t.config.OLAPRepository.ReadWorkflowRun(requestContext, sqlchelpers.UUIDFromStr(tenant.ID), sqlchelpers.UUIDFromStr(workflowRunId.String()))
 
 	if err != nil {
 		return nil, err
+	}
+
+	tasks, err := t.config.OLAPRepository.ListTasksByIdAndInsertedAt(
+		requestContext,
+		tenant.ID,
+		taskMetadata,
+	)
+
+	stepIdToTaskExternalId := make(map[pgtype.UUID]pgtype.UUID)
+	for _, task := range tasks {
+		stepIdToTaskExternalId[task.StepID] = task.ExternalID
 	}
 
 	workflowRun := *workflowRunPtr
@@ -42,7 +54,7 @@ func (t *V2WorkflowRunsService) V2WorkflowRunGet(ctx echo.Context, request gen.V
 		return nil, err
 	}
 
-	result, err := transformers.ToWorkflowRunDetails(taskRunEvents, &workflowRun, shape)
+	result, err := transformers.ToWorkflowRunDetails(taskRunEvents, &workflowRun, shape, tasks, stepIdToTaskExternalId)
 
 	if err != nil {
 		return nil, err
